--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,4 @@
 @font-face {
   font-family: UniDreamLED;
-  src: url('/static/fonts/UnidreamLED.ttf');
+  src: url('https://lvboda.cn/static/visual-3d/files/UnidreamLED.ttf');
 }
